[gd_scene load_steps=22 format=3 uid="uid://ceeyb7jmf5agy"]

[ext_resource type="Script" path="res://scripts/block-level/block_level.gd" id="1_re2eq"]
[ext_resource type="PackedScene" uid="uid://veyd8sbjwnbv" path="res://scenes/message-player.tscn" id="2_tllxi"]
[ext_resource type="Texture2D" uid="uid://ck8ji715s7ub5" path="res://assets/sprites/toolSprites/ToolButton.png" id="3_n44j8"]
[ext_resource type="Texture2D" uid="uid://kvd4w5bigwky" path="res://assets/sprites/toolSprites/ToolButton(selected).png" id="4_wf00w"]
[ext_resource type="Texture2D" uid="uid://b86jpd0w3mbne" path="res://assets/sprites/toolSprites/ToolButton(pressed).png" id="5_2llld"]
[ext_resource type="BitMap" uid="uid://cnjmm1n2fwnsx" path="res://assets/sprites/toolSprites/ToolButton(mask).png" id="6_kngor"]
[ext_resource type="FontFile" uid="uid://c4o75dteiydg8" path="res://assets/fonts/Conthrax-SemiBold.otf" id="7_uihpk"]
[ext_resource type="Script" path="res://scripts/drag-and-drop-collider.gd" id="8_0ip3c"]
[ext_resource type="Script" path="res://scenes/block-level/block_cipher.gd" id="8_628b3"]
[ext_resource type="AudioStream" uid="uid://drb60em6peswc" path="res://assets/sounds/click.wav" id="8_672xl"]
[ext_resource type="Animation" uid="uid://bo5lm4kv7nx3g" path="res://assets/Animations/open-window.res" id="9_20012"]
[ext_resource type="Shader" path="res://assets/shaders/blur.gdshader" id="10_17ic7"]
[ext_resource type="Texture2D" uid="uid://blw52q31ete6q" path="res://assets/sprites/window-frames/DraggableList.png" id="11_i5gje"]
[ext_resource type="PackedScene" uid="uid://d0kvlxf7acn71" path="res://scenes/dragable.tscn" id="12_qi7yx"]
[ext_resource type="PackedScene" uid="uid://c5d68u6kugplo" path="res://scenes/submit-box.tscn" id="13_dkm5j"]

[sub_resource type="Animation" id="Animation_25c0a"]
resource_name = "Temp"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k6oyn"]
_data = {
"Temp": SubResource("Animation_25c0a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7y7d"]
size = Vector2(590.252, 23.6364)

[sub_resource type="Animation" id="Animation_gq6ja"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DragableKey:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../DragableInit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjs0n"]
_data = {
"RESET": SubResource("Animation_gq6ja"),
"open-window": ExtResource("9_20012")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bd52l"]
shader = ExtResource("10_17ic7")
shader_parameter/lod = 2.5

[node name="BlockLevel" type="Control" node_paths=PackedStringArray("_key", "_initialization", "_text", "_level", "_timer")]
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 1158.0
offset_bottom = 654.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_re2eq")
levelMessages = Array[String]([""])
_answer = "help"
_keyStr = "1234"
_initStr = "last"
_key = NodePath("DragableKey")
_initialization = NodePath("DragableInit")
_text = NodePath("DragableText")
_level = NodePath("LevelStack/Block_Cipher")
_timer = NodePath("Timer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k6oyn")
}

[node name="LevelStack" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_top = -2.0
offset_right = 1151.0
offset_bottom = 647.0
size_flags_horizontal = 3

[node name="MessagePlayer" parent="LevelStack" instance=ExtResource("2_tllxi")]

[node name="RepeatText" type="TextureButton" parent="LevelStack"]
texture_filter = 1
layout_mode = 0
offset_left = 972.0
offset_top = 40.0
offset_right = 1019.0
offset_bottom = 55.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_n44j8")
texture_hover = ExtResource("4_wf00w")
texture_disabled = ExtResource("5_2llld")
texture_click_mask = ExtResource("6_kngor")

[node name="Label" type="Label" parent="LevelStack/RepeatText"]
layout_mode = 0
offset_top = 1.0
offset_right = 118.0
offset_bottom = 35.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.560784, 0.866667, 1, 1)
theme_override_fonts/font = ExtResource("7_uihpk")
text = "Call"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Block_Cipher" type="Control" parent="LevelStack" node_paths=PackedStringArray("_text", "_init", "_key")]
anchors_preset = 0
offset_left = 586.0
offset_top = 141.0
offset_right = 1001.0
offset_bottom = 459.0
script = ExtResource("8_628b3")
_text = NodePath("Text/UpperBox")
_init = NodePath("Init/UpperBox")
_key = NodePath("Key/UpperBox")

[node name="Text" type="Control" parent="LevelStack/Block_Cipher"]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = 192.0
offset_top = 46.0
offset_right = 400.0
offset_bottom = 67.0

[node name="UpperBox" type="Area2D" parent="LevelStack/Block_Cipher/Text"]
position = Vector2(104, 10)
scale = Vector2(0.369334, 1.1)
script = ExtResource("8_0ip3c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelStack/Block_Cipher/Text/UpperBox"]
position = Vector2(0, -0.909091)
shape = SubResource("RectangleShape2D_m7y7d")

[node name="Init" type="Control" parent="LevelStack/Block_Cipher"]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_top = 92.0
offset_right = 592.0
offset_bottom = 113.0

[node name="UpperBox" type="Area2D" parent="LevelStack/Block_Cipher/Init"]
position = Vector2(104, 10)
scale = Vector2(0.369334, 1.1)
script = ExtResource("8_0ip3c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelStack/Block_Cipher/Init/UpperBox"]
position = Vector2(-1196.75, 40)
shape = SubResource("RectangleShape2D_m7y7d")

[node name="Key" type="Control" parent="LevelStack/Block_Cipher"]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 138.0
offset_right = 784.0
offset_bottom = 159.0

[node name="UpperBox" type="Area2D" parent="LevelStack/Block_Cipher/Key"]
position = Vector2(104, 10)
scale = Vector2(0.369334, 1.1)
script = ExtResource("8_0ip3c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelStack/Block_Cipher/Key/UpperBox"]
position = Vector2(-1781.59, 139.091)
shape = SubResource("RectangleShape2D_m7y7d")

[node name="Clicks" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_672xl")
volume_db = -15.0

[node name="DraggableContainerFrame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -21.0
offset_top = -25.0
offset_right = 19.0
offset_bottom = 15.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(258, 362)
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="DraggableContainerFrame"]
libraries = {
"": SubResource("AnimationLibrary_pjs0n")
}
speed_scale = 1.7

[node name="Blur" type="Polygon2D" parent="DraggableContainerFrame"]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_bd52l")
polygon = PackedVector2Array(141, 128, 395, 128, 416, 148, 416, 263, 400, 278, 402, 468, 417, 484, 417, 533, 368, 582, 349, 582, 333, 600, 142, 599, 125, 580, 125, 141, 128, 134, 131, 130, 136, 128)

[node name="DraggableContainer" type="Sprite2D" parent="DraggableContainerFrame"]
position = Vector2(271, 336)
texture = ExtResource("11_i5gje")

[node name="Label" type="Label" parent="DraggableContainerFrame"]
layout_mode = 0
offset_left = 138.0
offset_top = 84.0
offset_right = 252.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(0.560784, 0.866667, 1, 1)
theme_override_fonts/font = ExtResource("7_uihpk")
theme_override_font_sizes/font_size = 26
text = "Clues"

[node name="DragableKey" parent="." instance=ExtResource("12_qi7yx")]
visible = false
z_index = 2
layout_mode = 1
offset_left = 114.0
offset_top = 140.0
offset_right = 314.0
offset_bottom = 165.0
text = "\"26_0"

[node name="DragableInit" parent="." instance=ExtResource("12_qi7yx")]
visible = false
z_index = 2
layout_mode = 0
offset_left = 114.0
offset_top = 183.0
offset_right = 314.0
offset_bottom = 208.0
text = "4A575A335F"

[node name="DragableText" parent="." instance=ExtResource("12_qi7yx")]
z_index = 2
layout_mode = 0
offset_left = 112.0
offset_top = 229.0
offset_right = 312.0
offset_bottom = 254.0
text = "4A575A335F"

[node name="submit-box" parent="." instance=ExtResource("13_dkm5j")]
layout_mode = 0
offset_left = 453.0
offset_top = 448.0
offset_right = 1007.0
offset_bottom = 569.0

[node name="Timer" type="Timer" parent="."]

[connection signal="child_order_changed" from="LevelStack" to="LevelStack" method="_on_child_order_changed"]
[connection signal="pressed" from="LevelStack/RepeatText" to="." method="_on_repeat_text_pressed"]
[connection signal="submit" from="submit-box" to="." method="_on_submitbox_submit"]
